# the-learning-project

./: .clinerules  .dockerignore  .env.example  .env.local.bak  .env.local.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Dockerfile  PLAN.md  PLANNING.md  README.md  RESUME.md  biome.json  d-ui-knowledge-snapshot.md  docker-compose.local.yml  docker-compose.mac.yml  docker-compose.yml  drizzle.config.local.ts  drizzle.config.ts  index.html  instrumentation.ts  kg-harness.html  kg-static.html  middleware.test.ts  middleware.ts  next.config.ts  package.json  playwright.usability.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.db.config.ts  vitest.migration.config.ts  vitest.shared.ts  (+1 more)
.claude/: settings.json
.codex/: hooks.json
.github/: dependabot.yml
.remember/: now.md  today-2026-07-22.md
.serena/: project.yml
app/: globals.css  layout.tsx  page.tsx
crates/calibration-native/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
crates/calibration-native/src/: lib.rs
docs/: architecture.md  sub5-restore-cli.md
drizzle/: 0000_crazy_ultragirl.sql  0000_wet_earthquake.sql  0001_complex_logan.sql  0001_slippery_skin.sql  0002_aromatic_expediter.sql  0002_friendly_lily_hollister.sql  0003_lively_galactus.sql  0003_smooth_doctor_strange.sql  0004_abandoned_wallop.sql  0004_phase1c1_step1_schema.sql  0005_phase1c1_event_payload_gin_and_mastery_view.sql  0006_drop_legacy_tables.sql  0007_learning_record_loop.sql  0008_futuristic_magneto.sql  0009_modern_shape.sql  0010_fair_selene.sql  0011_ai_task_runs.sql  0012_proposal_signals.sql  0013_mistake_variant.sql  0014_curvy_richard_fisk.sql  0016_far_whirlwind.sql  0017_outbox_event_ingest.sql  0018_marvelous_northstar.sql  0019_promote_tool_use.sql  0020_greedy_firestar.sql  0021_yuk143_goal.sql  0022_question_part.sql  0023_lovely_thing.sql  0024_dapper_barracuda.sql  0025_easy_masked_marvel.sql  0026_artifact_knowledge_ids_gin.sql  0027_knowledge_fsrs_state.sql  0028_u5_paper_answer_links.sql  0029_military_pete_wisdom.sql  0030_large_the_stranger.sql  0031_fat_madelyne_pryor.sql  0032_large_vertigo.sql  0033_large_gressill.sql  0034_mastery_theta_precision.sql  0034_outgoing_demogoblin.sql  (+44 more)
postman/: README.md  api-endpoints.json  learning-api.postman_collection.json  learning-local.postman_environment.json
scripts/: api-route-contract-legacy.json  api-smoke.ts  audit-api-contracts.ts  audit-calibration.test.ts  audit-calibration.ts  audit-draft-status-allowlist.json  audit-draft-status-reads-allowlist.json  (+81 more)
(+3324 files in other folders)
