[package]
name = "calibration-native"
version = "0.0.0"
edition = "2021"
description = "YUK-493 Phase -1 — Rust napi port of the offline calibration core (mulberry32 + forwardAuc + paired cluster bootstrap). JS (src/server/calibration/*) stays the oracle + fallback; this is bit-exact-parity verified."
publish = false

# rlib added (alongside cdylib) so `cargo test` can build the unit-test harness for the
# Rust-native KAT/property tests (YUK-513 #123 — Rust-first, no TS oracle per ADR-0046 §4/§6).
# cdylib is still produced for the napi/.node + wasm targets; rlib has no effect on those.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi9"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"

# Standalone crate (no workspace root) — this [profile.release] IS honored today.
# NOTE: if a workspace root Cargo.toml is ever added, Cargo ignores member-crate [profile]
# tables, so move this `lto = true` to the workspace root manifest to keep it in effect.
[profile.release]
lto = true
